# geo-bench-experiments

./: .gitignore  pyproject.toml
.github/: copilot-instructions.md
experiments/prithvi_forestnet/1.00x_train_prithvi_v2_forestnet_classification_v1.0_02-23-2026_17:44:58prithvi_eo_v2_100_tl/m-forestnet/seed_0/: config.yaml  run.sh  task_specs.pkl
experiments/prithvi_forestnet/1.00x_train_prithvi_v2_forestnet_classification_v1.0_02-23-2026_17:44:58prithvi_eo_v2_100_tl/m-forestnet/seed_0/csv_logs/version_0/: metrics.csv
experiments/prithvi_forestnet/1.00x_train_prithvi_v2_forestnet_classification_v1.0_02-23-2026_17:44:58prithvi_eo_v2_100_tl/m-forestnet/seed_0/csv_logs/version_1/: metrics.csv
geobench_exp/: generate_experiment.py  job.py
geobench_exp/configs/: prithvi_bigearthnet_task.yaml  prithvi_cls_all_task.yaml  prithvi_dummy_classification_task.yaml  prithvi_forestnet_task.yaml  prithvi_pv4ger_seg_task.yaml  prithvi_seg_all_task.yaml  prithvi_segmentation_task.yaml
geobench_exp/configs/model_configs/classification/: prithvi_v2_100.yaml  prithvi_v2_100_all_bands.yaml  prithvi_v2_300_all_bands.yaml  prithvi_v2_600_all_bands.yaml  prithvi_v2_tiny_all_bands.yaml
geobench_exp/configs/model_configs/segmentation/: prithvi_v2_100_tl.yaml  prithvi_v2_300_tl.yaml  prithvi_v2_600_tl.yaml  prithvi_v2_tiny_all_bands.yaml
geobench_exp/notebooks/: visualize_results.ipynb
geobench_exp/torch_toolbox/: dataset.py  model.py  model_utils.py  prithvi_model.py
scripts/: download_prithvi_300m.sh  download_prithvi_600m.sh  restart_failed_seg_runs.sh  run_prithvi_forestnet.sh  start_cls_runs.sh  start_seg_runs.sh  submit_slurm_all.sh
