[build-system]
requires = [
    # setuptools 61+ required for pyproject.toml support
    "setuptools>=61",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["geobench_exp*"]

[project]
name = "geobench_exp"
version = "0.0.1"
description = "Experiment code."
requires-python = ">=3.12"
authors = [
    { name = "Alexandre Lacoste", email = "alexandre.lacoste@servicenow.com" },
    { name = "Nils Lehmann", email = "n.lehmann@tum.de"},
    { name = "Pau Rodriguez"},
    { name = "Alexandre Drouin"},
    { name = "Mehmet Gunturkun"},
]

dependencies = [
  "segmentation-models-pytorch>=0.4.0",
  "pandas>=2.0",
  "scipy>=1.13.0",
  "geobench @ git+https://github.com/Mdmdma/geo-bench.git@9eb0ca05a0ce19bf1b8bbb436919e87b93434279",
  "h5py>=3.10.0",
  "wandb>=0.19.0",
  "seaborn>=0.13.0",
  "ipyplot>=1.1.1",
  "ipyleaflet>=0.19",
  "pytest-xdist>=3.2.1",
]

[project.optional-dependencies]
dev = [
  "black>=26.0",
  "pytest>=9.0",
  "pytest-cov>=7.0",
  "isort>=8.0",
  "colorama>=0.4.6",
  "flake8>=7.0",
  "pydocstyle>=6.3",
  "pre-commit>=3.0.4",
]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
line_length = 120

[tool.flake8]
max-line-length = 120
max-complexity = 23


[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''


[project.scripts]
geobench_exp-gen_exp = "geobench_exp.generate_experiment:start"
geobench_exp-run_exp = "geobench_exp.run_experiment:start"
